--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/PeterGrayCreative/full-stack-practice/issues"
   },
-  "homepage": "https://github.com/PeterGrayCreative/full-stack-practice#readme"
+  "homepage": "https://github.com/PeterGrayCreative/full-stack-practice#readme",
+  "dependencies": {
+    "bcrypt": "^1.0.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.11"
+  }
 }
